added draft headerComponent

--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -1,4 +1,8 @@
 /* Color styles */
+$bg-black: black;
+$bg-dark: #434343;
+$text-red: #E50914;
+
 $lightblue: rgb(218, 233, 254);
 $blacktext: rgb(63, 54, 59);
 $bluetext: rgb(24, 71, 132);
