--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -2,6 +2,7 @@
 $bg-black: black;
 $bg-dark: #434343;
 $text-red: #E50914;
+$text-light: #FFFFFF;
 
 $lightblue: rgb(218, 233, 254);
 $blacktext: rgb(63, 54, 59);
