added style to AccountSelection

--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -1,9 +1,11 @@
 /* Color styles */
 $bg-black: black;
 $bg-dark: #434343;
+$bg-accounts: #141414; 
 $text-red: #E50914;
 $text-light: #FFFFFF;
 $text-gray: #B3B3B3;
+
 
 $lightblue: rgb(218, 233, 254);
 $blacktext: rgb(63, 54, 59);
