added vetrina to start video

--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -5,6 +5,8 @@ $bg-accounts: #141414;
 $text-red: #E50914;
 $text-light: #FFFFFF;
 $text-gray: #B3B3B3;
+$button-light: #FFFFFF;
+$button-dark: #5B5756;
 
 
 $lightblue: rgb(218, 233, 254);
